--- a/fidget-wasm-demo/index.html
+++ b/fidget-wasm-demo/index.html
@@ -1,8 +1,16 @@
 <html>
   <head>
+    <style>
+div.cm-editor {
+    width: 50%;
+    height: 400px;
+    display: block;
+    outline: 1px solid black;
+}
+    </style>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
   </head>
   <body>
-    <p>A greeting from rust looks like...</p>
+    <div id="editor"></div>
   </body>
 </html>
