Adding output pane

--- a/fidget-wasm-demo/index.html
+++ b/fidget-wasm-demo/index.html
@@ -1,16 +1,23 @@
 <html>
   <head>
     <style>
-div.cm-editor {
-    width: 50%;
+div#editor {
     height: 400px;
+    width: 50%;
     display: block;
-    outline: 1px solid black;
+    outline: 1px solid #bbb;
+}
+div#output-outer {
+    width: 50%;
+    display: block;
+    margin-top: 10px;
+    outline: 1px solid #bbb;
 }
     </style>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
   </head>
   <body>
-    <div id="editor"></div>
+    <div id="editor-outer"></div>
+    <div id="output-outer"></div>
   </body>
 </html>
