Plumbing RenderMode through to the worker

--- a/wasm-demo/index.html
+++ b/wasm-demo/index.html
@@ -50,9 +50,9 @@
         <canvas id="glcanvas" width="512" height="512"></canvas>
         <span id="status">Loading...</span>
         <select name="mode" id="mode">
-          <option value="two-bit">2D (bitmap)</option>
-          <option value="three-norm">3D (shaded)</option>
-          <option value="three-height">3D (heightmap)</option>
+          <option value="bitmap">2D (bitmap)</option>
+          <option value="normals">3D (shaded)</option>
+          <option value="heightmap">3D (heightmap)</option>
         </select>
       </div>
     </div>
