Make default demo a gyroid + sphere; add basic unit test

--- a/demos/web-editor/index.html
+++ b/demos/web-editor/index.html
@@ -51,7 +51,7 @@
         <span id="status">Loading...</span>
         <select name="mode" id="mode">
           <option value="bitmap">2D (bitmap)</option>
-          <option value="normals">3D (normals)</option>
+          <option value="normals" selected="selected">3D (normals)</option>
           <option value="heightmap">3D (heightmap)</option>
         </select>
       </div>
