--- a/demos/constraints/index.html
+++ b/demos/constraints/index.html
@@ -26,32 +26,21 @@
             width: 100%;
         }
 
-        div.box {
-            outline: 1px solid #bbb;
-            margin: 20px;
-        }
-
-        /* Position canvas in center-top: */
         canvas {
+            margin-right: auto;
+            margin-left: auto;
             display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 300px;
+            width: 300px;
         }
     </style>
 </head>
 
 <body>
-    <!--
-        canvas-in-div is required because egui will float the canvas to the
-        top of its container; see https://github.com/emilk/egui/discussions/746
-    -->
-    <div class="box" style="position: relative; width: 300px; height: 300px">
     <canvas id="the_canvas_id"></canvas>
-    </div>
-
-    <!--
-    <div class="box" style="position: relative; width: 300px; height: 300px">
-    <canvas id="the_other_canvas_id"></canvas>
-    </div>
-    -->
 </body>
 
 </html>
