--- a/demos/web-editor/web/src/index.html
+++ b/demos/web-editor/web/src/index.html
@@ -5,7 +5,7 @@
     <title>Fidget Demo</title>
     <style>
       div#editor {
-        height: 512;
+        height: 512px;
         width: 100%;
         display: block;
         outline: 1px solid #bbb;
