--- a/demos/web-editor/web/src/index.html
+++ b/demos/web-editor/web/src/index.html
@@ -1,10 +1,11 @@
+<!doctype html>
 <html>
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
     <title>Fidget Demo</title>
     <style>
       div#editor {
-        height: 512;
+        height: 512px;
         width: 100%;
         display: block;
         outline: 1px solid #bbb;
@@ -56,5 +57,6 @@
         </select>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
