--- a/demos/web-editor/web/src/index.html
+++ b/demos/web-editor/web/src/index.html
@@ -61,11 +61,17 @@
       </div>
     </div>
     <div id="version">
-        <p>
-          <a href="https://github.com/mkeeter/fidget">Github</a> |
-          <a href="https://mattkeeter.com/projects/fidget">Writeup</a>
-        <p>Version: <a href="https://github.com/mkeeter/fidget/commit/VERSION">
-        VERSIONMOD</a>
+      <p>
+        <a href="https://github.com/mkeeter/fidget">Github</a> |
+        <a href="https://mattkeeter.com/projects/fidget">Writeup</a>
+      </p>
+
+      <p>
+        Version:
+        <a href="https://github.com/mkeeter/fidget/commit/VERSION">
+          VERSIONMOD</a
+        >
+      </p>
     </div>
     <script src="index.js"></script>
   </body>
