Prevent weird default browser gestures

--- a/demos/web-editor/web/src/index.html
+++ b/demos/web-editor/web/src/index.html
@@ -26,6 +26,9 @@
         max-height: 512px;
         outline: 1px solid #bbb;
         margin-bottom: 12px;
+        user-select: none;
+        pointer-events: none;
+        touch-action: none;
       }
       span#status {
         display: block;
