--- a/demos/web-editor/web/src/index.html
+++ b/demos/web-editor/web/src/index.html
@@ -59,6 +59,7 @@
           <option value="bitmap">2D (bitmap)</option>
           <option value="normals" selected="selected">3D (normals)</option>
           <option value="heightmap">3D (heightmap)</option>
+          <option value="shaded">3D (shaded)</option>
         </select>
       </div>
     </div>
